feat: Add support for [PATCH] /vessels/:id/charters/:id (#24)
