# src/main/kotlin/run/galley/cloud/controller/CharterControllerVerticle.kt
@@ -1,22 +1,22 @@
 package run.galley.cloud.controller
 
 import generated.jooq.tables.pojos.Charters
+import generated.jooq.tables.references.CHARTERS
 import io.vertx.core.eventbus.Message
 import io.vertx.kotlin.coroutines.CoroutineVerticle
 import io.vertx.kotlin.coroutines.coAwait
 import nl.clicqo.api.Pagination
 import nl.clicqo.api.SortDirection
 import nl.clicqo.api.SortField
-import nl.clicqo.data.DataPayload
 import nl.clicqo.eventbus.EventBusApiRequest
 import nl.clicqo.eventbus.EventBusApiResponse
 import nl.clicqo.eventbus.EventBusCmdDataRequest
 import nl.clicqo.eventbus.EventBusDataResponse
 import nl.clicqo.eventbus.EventBusQueryDataRequest
+import nl.clicqo.ext.camelCaseToSnakeCase
 import nl.clicqo.ext.toUUID
 import nl.clicqo.web.HttpStatus
 import nl.kleilokaal.queue.modules.coroutineConsumer
-import org.slf4j.LoggerFactory
 import run.galley.cloud.ApiStatus
 import run.galley.cloud.data.CharterDataVerticle
 import run.galley.cloud.model.UserRole
@@ -28,6 +28,7 @@ class CharterControllerVerticle : CoroutineVerticle() {
     const val LIST = "charter.query.list"
     const val GET = "charter.query.get"
     const val CREATE = "charter.cmd.create"
+    const val PATCH = "charter.cmd.patch"
   }
 
   override suspend fun start() {
@@ -36,6 +37,7 @@ class CharterControllerVerticle : CoroutineVerticle() {
     vertx.eventBus().coroutineConsumer(coroutineContext, LIST, ::list)
     vertx.eventBus().coroutineConsumer(coroutineContext, GET, ::get)
     vertx.eventBus().coroutineConsumer(coroutineContext, CREATE, ::create)
+    vertx.eventBus().coroutineConsumer(coroutineContext, PATCH, ::patch)
   }
 
   private suspend fun list(message: Message<EventBusApiRequest>) {
@@ -45,7 +47,7 @@ class CharterControllerVerticle : CoroutineVerticle() {
     // Convert API query params to filters
     val filters = mutableMapOf<String, List<String>>()
     apiRequest.query?.forEach { (key, value) ->
-      filters[key] = listOf(value.string)
+      filters[key.camelCaseToSnakeCase()] = listOf(value.string)
     }
 
     val vesselId =
@@ -56,7 +58,7 @@ class CharterControllerVerticle : CoroutineVerticle() {
 
     filters["vesselId"] = listOf(vesselId.toString())
     if (userRole != UserRole.VESSEL_CAPTAIN) {
-      filters["id"] = apiRequest.user?.get<List<String>>("charterIds") ?: throw ApiStatus.CHARTER_NO_ACCESS
+      filters["id"] = listOf(apiRequest.user?.get<String>("charterIds") ?: throw ApiStatus.CHARTER_NO_ACCESS)
       TODO("Not implemented")
     }
 
@@ -87,9 +89,9 @@ class CharterControllerVerticle : CoroutineVerticle() {
   private suspend fun get(message: Message<EventBusApiRequest>) {
     val apiRequest = message.body()
 
-    // Extract charterId from path identifiers
+    val vesselId = apiRequest.identifiers?.get("vesselId")?.string ?: throw ApiStatus.VESSEL_ID_INCORRECT
     val charterId =
-      apiRequest.identifiers?.get("charterId")?.string
+      apiRequest.identifiers["charterId"]?.string
         ?: throw IllegalArgumentException("charterId is required")
 
     // Build data request with identifier
@@ -98,10 +100,7 @@ class CharterControllerVerticle : CoroutineVerticle() {
         identifiers = mapOf("id" to charterId),
         filters =
           mapOf(
-            "vesselId" to
-              listOf(
-                apiRequest.identifiers["vesselId"]?.string ?: throw ApiStatus.VESSEL_ID_INCORRECT,
-              ),
+            CHARTERS.VESSEL_ID.name to listOf(vesselId),
           ),
         user = apiRequest.user?.principal(),
       )
@@ -131,13 +130,12 @@ class CharterControllerVerticle : CoroutineVerticle() {
         ?.string
         ?.toUUID() ?: throw ApiStatus.VESSEL_ID_INCORRECT
 
-    val charter =
-      apiRequest.body?.let { Charters().fromRequestBody<Charters>(it) } ?: throw ApiStatus.REQUEST_BODY_MISSING
-    charter.vesselId = vesselId
+    val charter = apiRequest.body ?: throw ApiStatus.REQUEST_BODY_MISSING
+    charter.put(CHARTERS.VESSEL_ID.name, vesselId)
 
     val dataRequest =
       EventBusCmdDataRequest(
-        payload = DataPayload.one(charter),
+        payload = charter,
         userId = userId,
       )
 
@@ -150,8 +148,44 @@ class CharterControllerVerticle : CoroutineVerticle() {
 
     message.reply(
       EventBusApiResponse(
-        data = dataResponse.payload.toOne()!!.toJsonAPIResourceObject(),
+        data = dataResponse.payload.toOne()?.toJsonAPIResourceObject() ?: throw ApiStatus.CHARTER_CREATE_FAILURE,
         httpStatus = HttpStatus.Created,
+      ),
+    )
+  }
+
+  private suspend fun patch(message: Message<EventBusApiRequest>) {
+    val apiRequest = message.body()
+    val vesselId =
+      apiRequest.identifiers
+        ?.get("vesselId")
+        ?.string
+        ?.toUUID() ?: throw ApiStatus.VESSEL_ID_INCORRECT
+    val charterId =
+      apiRequest.identifiers["charterId"]
+        ?.string
+        ?.toUUID() ?: throw ApiStatus.VESSEL_ID_INCORRECT
+
+    val dataRequest =
+      EventBusCmdDataRequest(
+        payload = apiRequest.body,
+        identifier = charterId,
+        filters =
+          mapOf(
+            CHARTERS.VESSEL_ID.name to listOf(vesselId.toString()),
+          ),
+      )
+
+    val dataResponse =
+      vertx
+        .eventBus()
+        .request<EventBusDataResponse<Charters>>(CharterDataVerticle.PATCH, dataRequest)
+        .coAwait()
+        .body()
+
+    message.reply(
+      EventBusApiResponse(
+        data = dataResponse.payload.toOne()?.toJsonAPIResourceObject() ?: throw ApiStatus.CHARTER_NOT_FOUND,
       ),
     )
   }
